--- a/.github/workflows/workspace_deployment.yml
+++ b/.github/workflows/workspace_deployment.yml
@@ -2,7 +2,7 @@ name: workspace_deployment
 
 on:
     push:
-        branches: [ publish_branch ]
+        branches: [workspace_publish]
 jobs:
     release:
         # You also can use the self-hosted runners.
