--- a/.github/workflows/workspace_deployment.yml
+++ b/.github/workflows/workspace_deployment.yml
@@ -4,28 +4,30 @@ on:
     push:
         branches: [workspace_publish]
 
-workflow_dispatch:
- 
 jobs:
     release:
         # You also can use the self-hosted runners.
+        name: published code 
         runs-on: windows-latest
         steps:
         # Checks out your repository under $GITHUB_WORKSPACE, so your job can access it.
-        - uses: actions/checkout@v2
+        - name: checkout code
+          uses: actions/checkout@v2
         
         - name: Synapse workspace deployment
           uses: azure/synapse-workspace-deployment@release-1.0
-        with:
-          TargetWorkspaceName: 'synapseworkspace-prod-2207'
-          TemplateFile: './synapsecicd2207/TemplateForWorkspace.json'
-          ParametersFile: './synapsecicd2207/TemplateParametersForWorkspace.json'
+          
+          with:
+                      
+           TargetWorkspaceName: 'synapseworkspace-prod-2207'
+           TemplateFile: './synapsecicd2207/TemplateForWorkspace.json'
+           ParametersFile: './synapsecicd2207/TemplateParametersForWorkspace.json'
          # OverrideArmParameters: './path of the parameters.yaml'
-          environment: 'Azure Public'
-          resourceGroup: 'RG-Dev-2207'
-          clientId: ${{secrets.CLIENTID}}
-          clientSecret:  ${{secrets.CLIENTSECRET}}
-          subscriptionId: ${{secrets.SUBCRIPTIONID}}
-          tenantId: ${{secrets.TENANTID}}
-          DeleteArtifactsNotInTemplate: 'true'
-          managedIdentity: 'False'
+           environment: 'Azure Public'
+           resourceGroup: 'RG-Dev-2207'
+           clientId: ${{secrets.CLIENTID}}
+           clientSecret:  ${{secrets.CLIENTSECRET}}
+           subscriptionId: ${{secrets.SUBCRIPTIONID}}
+           tenantId: ${{secrets.TENANTID}}
+           DeleteArtifactsNotInTemplate: 'true'
+           managedIdentity: 'False'
