--- a/.github/workflows/workspace_deployment.yml
+++ b/.github/workflows/workspace_deployment.yml
@@ -4,6 +4,8 @@ on:
     push:
         branches: [workspace_publish]
 
+    workflow_dispatch:
+
 jobs:
     release:
         # You also can use the self-hosted runners.
