--- a/.github/workflows/workspace_deployment.yml
+++ b/.github/workflows/workspace_deployment.yml
@@ -29,7 +29,7 @@ jobs:
            resourceGroup: 'RG-Dev-2207'
            clientId: ${{secrets.CLIENTID}}
            clientSecret:  ${{secrets.CLIENTSECRET}}
-           subscriptionId: ${{secrets.SUBCRIPTIONID}}
+           subscriptionId: ${{secrets.SUBSCRIPTIONID}}
            tenantId: ${{secrets.TENANTID}}
            DeleteArtifactsNotInTemplate: 'true'
            managedIdentity: 'False'
